Only the sidebar is getting hindi convert and the sku and team stays in

--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -12,8 +12,45 @@
     "My Reports": "मेरी रिपोर्ट",
     "Orders": "आदेश",
     "Payments": "भुगतान",
-    "SKU Management": "SKU प्रबंधन",
-    "Manage Team": "team का प्रबंधन करें",
+    "SKU Management": "SKU और इन्वेंटरी प्रबंधन",
+    "Manage Team": "अपनी टीम प्रबंधित करें",
     "My Deliveries": "मेरी डिलीवरी",
-    "My Orders": "मेरे आर्डर"
+    "My Orders": "मेरे आर्डर",
+    "Distributor Dashboard": "वितरक डैशबोर्ड",
+    "An overview of your organization's operations.": "आपके संगठन के संचालन का अवलोकन।",
+    "Recent Orders": "हाल के आदेश",
+    "In the last 7 days": "पिछले 7 दिनों में",
+    "Assigned Outlets": "सौंपे गए आउटलेट",
+    "In your distribution network": "आपके वितरण नेटवर्क में",
+    "Team Members": "टीम के सदस्य",
+    "Delivery partners in your team": "आपकी टीम में डिलीवरी पार्टनर",
+    "Pending Dues": "लंबित बकाया",
+    "Total outstanding payments": "कुल बकाया भुगतान",
+    "A list of your 5 most recent orders.": "आपके 5 सबसे हालिया ऑर्डर की सूची।",
+    "View All": "सभी देखें",
+    "Outlet": "आउटलेट",
+    "Status": "दर्जा",
+    "Date": "तारीख",
+    "Value": "मूल्य",
+    "No recent orders found.": "हाल ही में कोई आदेश नहीं मिला।",
+    "Your assigned delivery partners.": "आपके सौंपे गए डिलीवरी पार्टनर।",
+    "No team members found.": "कोई टीम सदस्य नहीं मिला।",
+    "A list of all team members in your organization.": "आपके संगठन के सभी टीम सदस्यों की सूची।",
+    "Add User": "उपयोगकर्ता जोड़ें",
+    "Name": "नाम",
+    "Email": "ईमेल",
+    "Role": "भूमिका",
+    "Joined": "शामिल हुए",
+    "No team members found. Add one to get started.": "कोई टीम सदस्य नहीं मिला। आरंभ करने के लिए एक जोड़ें।",
+    "A list of all products in your inventory.": "आपकी इन्वेंट्री में सभी उत्पादों की सूची।",
+    "Add SKU": "SKU जोड़ें",
+    "Product Name": "उत्पाद का नाम",
+    "SKU Code": "SKU कोड",
+    "Stock": "स्टॉक",
+    "Unit": "इकाई",
+    "Units/Case": "यूनिट/केस",
+    "Case Price": "case price",
+    "Per Item Cost": "प्रति आइटम लागत",
+    "MRP": "MRP",
+    "No SKUs found. Add one to get started.": "कोई SKU नहीं मिला। आरंभ करने के लिए एक जोड़ें।"
 }
