--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -12,8 +12,45 @@
     "My Reports": "My Reports",
     "Orders": "Orders",
     "Payments": "Payments",
-    "SKU Management": "SKU Management",
-    "Manage Team": "Manage Team",
+    "SKU Management": "SKU & Inventory Management",
+    "Manage Team": "Manage Your Team",
     "My Deliveries": "My Deliveries",
-    "My Orders": "My Orders"
+    "My Orders": "My Orders",
+    "Distributor Dashboard": "Distributor Dashboard",
+    "An overview of your organization's operations.": "An overview of your organization's operations.",
+    "Recent Orders": "Recent Orders",
+    "In the last 7 days": "In the last 7 days",
+    "Assigned Outlets": "Assigned Outlets",
+    "In your distribution network": "In your distribution network",
+    "Team Members": "Team Members",
+    "Delivery partners in your team": "Delivery partners in your team",
+    "Pending Dues": "Pending Dues",
+    "Total outstanding payments": "Total outstanding payments",
+    "A list of your 5 most recent orders.": "A list of your 5 most recent orders.",
+    "View All": "View All",
+    "Outlet": "Outlet",
+    "Status": "Status",
+    "Date": "Date",
+    "Value": "Value",
+    "No recent orders found.": "No recent orders found.",
+    "Your assigned delivery partners.": "Your assigned delivery partners.",
+    "No team members found.": "No team members found.",
+    "A list of all team members in your organization.": "A list of all team members in your organization.",
+    "Add User": "Add User",
+    "Name": "Name",
+    "Email": "Email",
+    "Role": "Role",
+    "Joined": "Joined",
+    "No team members found. Add one to get started.": "No team members found. Add one to get started.",
+    "A list of all products in your inventory.": "A list of all products in your inventory.",
+    "Add SKU": "Add SKU",
+    "Product Name": "Product Name",
+    "SKU Code": "SKU Code",
+    "Stock": "Stock",
+    "Unit": "Unit",
+    "Units/Case": "Units/Case",
+    "Case Price": "Case Price",
+    "Per Item Cost": "Per Item Cost",
+    "MRP": "MRP",
+    "No SKUs found. Add one to get started.": "No SKUs found. Add one to get started."
 }
