the sku items with this table is create table public.skus (   id bigint

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -12,8 +12,8 @@
     "My Reports": "My Reports",
     "Orders": "Orders",
     "Payments": "Payments",
-    "SKU Management": "SKU & Inventory Management",
-    "Manage Team": "Manage Your Team",
+    "SKU Management": "SKU & Inventory",
+    "Manage Team": "Manage Team",
     "My Deliveries": "My Deliveries",
     "My Orders": "My Orders",
     "Distributor Dashboard": "Distributor Dashboard",
