--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -12,8 +12,8 @@
     "My Reports": "मेरी रिपोर्ट",
     "Orders": "आदेश",
     "Payments": "भुगतान",
-    "SKU Management": "SKU और इन्वेंटरी प्रबंधन",
-    "Manage Team": "अपनी टीम प्रबंधित करें",
+    "SKU Management": "SKU और इन्वेंटरी",
+    "Manage Team": "टीम प्रबंधित करें",
     "My Deliveries": "मेरी डिलीवरी",
     "My Orders": "मेरे आर्डर",
     "Distributor Dashboard": "वितरक डैशबोर्ड",
