--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -20,6 +20,7 @@
     "My Orders": "My Orders",
     "Create Stock Order": "Create Stock Order",
     "My Stock Orders": "My Stock Orders",
+    "Stock Orders": "Stock Orders",
     "Distributor Dashboard": "Distributor Dashboard",
     "An overview of your organization's operations.": "An overview of your organization's operations.",
     "Recent Orders": "Recent Orders",
