--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -20,6 +20,7 @@
     "Create Stock Order": "स्टॉक ऑर्डर बनाएं",
     "My Stock Orders": "मेरे स्टॉक ऑर्डर",
     "Stock Orders": "स्टॉक आर्डर",
+    "SKUs & Inventory": "SKU और इन्वेंटरी",
     "Distributor Dashboard": "वितरक डैशबोर्ड",
     "An overview of your organization's operations.": "आपके संगठन के संचालन का अवलोकन।",
     "Recent Orders": "हाल के आदेश",
