In the team members section can you show sales executive instead of deli

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -28,7 +28,7 @@
     "Assigned Outlets": "Assigned Outlets",
     "In your distribution network": "In your distribution network",
     "Team Members": "Team Members",
-    "Delivery partners in your team": "Delivery partners in your team",
+    "Delivery partners in your team": "Sales executives in your team",
     "Pending Dues": "Pending Dues",
     "Total outstanding payments": "Total outstanding payments",
     "A list of your 5 most recent orders.": "A list of your 5 most recent orders.",
@@ -38,7 +38,7 @@
     "Date": "Date",
     "Value": "Value",
     "No recent orders found.": "No recent orders found.",
-    "Your assigned delivery partners.": "Your assigned delivery partners.",
+    "Your assigned delivery partners.": "Your assigned sales executives.",
     "No team members found.": "No team members found.",
     "A list of all team members in your organization.": "A list of all team members in your organization.",
     "Add User": "Add User",
