--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -28,7 +28,7 @@
     "Assigned Outlets": "सौंपे गए आउटलेट",
     "In your distribution network": "आपके वितरण नेटवर्क में",
     "Team Members": "टीम के सदस्य",
-    "Delivery partners in your team": "आपकी टीम में डिलीवरी पार्टनर",
+    "Delivery partners in your team": "आपकी टीम में बिक्री कार्यकारी",
     "Pending Dues": "लंबित बकाया",
     "Total outstanding payments": "कुल बकाया भुगतान",
     "A list of your 5 most recent orders.": "आपके 5 सबसे हालिया ऑर्डर की सूची।",
@@ -38,7 +38,7 @@
     "Date": "तारीख",
     "Value": "मूल्य",
     "No recent orders found.": "हाल ही में कोई आदेश नहीं मिला।",
-    "Your assigned delivery partners.": "आपके सौंपे गए डिलीवरी पार्टनर।",
+    "Your assigned delivery partners.": "आपके सौंपे गए बिक्री कार्यकारी।",
     "No team members found.": "कोई टीम सदस्य नहीं मिला।",
     "A list of all team members in your organization.": "आपके संगठन के सभी टीम सदस्यों की सूची।",
     "Add User": "उपयोगकर्ता जोड़ें",
